crates/pg_syntax/tests/snapshots/postgres_regress/select@79.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select sillysrf(42);
---
SelectStmt@0..20
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..18
    FuncCall@7..18
      Ident@7..15 "sillysrf"
      Ascii40@15..16 "("
      AConst@16..18
        Iconst@16..18 "42"
  Ascii41@18..19 ")"
  Ascii59@19..20 ";"

