crates/pg_syntax/tests/snapshots/postgres_regress/select@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from (values (2),(null),(1)) v(k) where k = k;"
---
SelectStmt@0..55
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  RangeSubselect@15..41
    SelectStmt@15..35
      Values@15..21 "values"
      Whitespace@21..22 " "
      Ascii40@22..23 "("
      List@23..24
        AConst@23..24
          Iconst@23..24 "2"
      Ascii41@24..25 ")"
      Ascii44@25..26 ","
      Ascii40@26..27 "("
      List@27..31
        AConst@27..31
          NullP@27..31 "null"
      Ascii41@31..32 ")"
      Ascii44@32..33 ","
      Ascii40@33..34 "("
      List@34..35
        AConst@34..35
          Iconst@34..35 "1"
    Ascii41@35..36 ")"
    Ascii41@36..37 ")"
    Whitespace@37..38 " "
    Alias@38..41
      Ident@38..39 "v"
      Ascii40@39..40 "("
      Ident@40..41 "k"
  Ascii41@41..42 ")"
  Whitespace@42..43 " "
  Where@43..48 "where"
  Whitespace@48..49 " "
  AExpr@49..54
    ColumnRef@49..50
      Ident@49..50 "k"
    Whitespace@50..51 " "
    Ascii61@51..52 "="
    Whitespace@52..53 " "
    ColumnRef@53..54
      Ident@53..54 "k"
  Ascii59@54..55 ";"

