crates/pg_syntax/tests/snapshots/postgres_regress/select@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table list_parted_tbl1 partition of list_parted_tbl\n  for values in (1) partition by list(b);"
---
CreateStmt@0..100
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..29
    Ident@13..29 "list_parted_tbl1"
  Whitespace@29..30 " "
  Partition@30..39 "partition"
  Whitespace@39..40 " "
  Of@40..42 "of"
  Whitespace@42..43 " "
  RangeVar@43..58
    Ident@43..58 "list_parted_tbl"
  Newline@58..59 "\n"
  Whitespace@59..61 "  "
  For@61..64 "for"
  Whitespace@64..65 " "
  Values@65..71 "values"
  Whitespace@71..72 " "
  PartitionBoundSpec@72..77
    InP@72..74 "in"
    Whitespace@74..75 " "
    Ascii40@75..76 "("
    AConst@76..77
      Iconst@76..77 "1"
  Ascii41@77..78 ")"
  Whitespace@78..79 " "
  PartitionSpec@79..98
    Partition@79..88 "partition"
    Whitespace@88..89 " "
    By@89..91 "by"
    Whitespace@91..92 " "
    Ident@92..96 "list"
    Ascii40@96..97 "("
    PartitionElem@97..98
      Ident@97..98 "b"
  Ascii41@98..99 ")"
  Ascii59@99..100 ";"

