crates/pg_syntax/tests/snapshots/postgres_regress/select_distinct@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: INSERT INTO DISTTABLE VALUES(NULL);
---
InsertStmt@0..35
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "DISTTABLE"
  Whitespace@21..22 " "
  SelectStmt@22..33
    Values@22..28 "VALUES"
    Ascii40@28..29 "("
    List@29..33
      AConst@29..33
        NullP@29..33 "NULL"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

